# django-parser-app

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg
.github/workflows/: django.yml
django_parser_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: documentations.txt
parser_app/: __init__.py  admin.py  admin_mixin.py  apps.py  models.py  parser.py  urls.py  views.py
parser_app/api/: serializers.py  views.py
parser_app/migrations/: 0001_initial.py
parser_app/static/parser_admin/css/: parser_custom.css
parser_app/static/parser_admin/js/: functions.js  toast-maker.js
parser_app/templates/parser_admin/: base.html  column_mapping.html
parser_app/templates/parser_admin/partials/: _overlay.html  _toast_messages.html
