[metadata]
name = django-parser-app
version = 0.0.1
description = A Django app to upload XL files in a convenient manner.
long_description = file: README.rst
url = https://www.github.com/prantoamt/django-parser-app
author = Md. Badiuzzaman Pranto
author_email = prantoamt@gmail.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2.3 
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2.3
    asgiref==3.3.4
    certifi==2020.12.5
    chardet==4.0.0
    coreapi==2.3.3
    coreschema==0.0.4
    django-cors-headers==3.7.0
    djangorestframework==3.12.4
    et-xmlfile==1.1.0
    idna==2.10
    itypes==1.2.0
    Jinja2==3.0.1
    Markdown==3.3.4
    MarkupSafe==2.0.1
    numpy==1.20.3
    openpyxl==3.0.7
    pandas==1.2.3
    psycopg2-binary==2.8.6
    python-dateutil==2.8.1
    pytz==2021.1
    requests==2.25.1
    six==1.16.0
    sqlparse==0.4.1
    uritemplate==3.0.1
    urllib3==1.26.5